<resources>
    <string name="app_name">Ejercicio_Evaluable</string>
    <string name="texto1"> Millones de canciones.</string>
    <string name="texto2"> Gratis en Spotify.</string>
    <string name="iniciarsesion"> Iniciar sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="contraseña"> Contraseña</string>
    <string name="albumes1"> Álbumes y sencillos populares</string>
    <string name="emisoras"> Emisoras populares</string>
    <string name="portada1texto"> Un Verano Sin Ti</string>
    <string name="bb"> Bad Bunny</string>
</resources>